@@ -7,7 +7,7 @@
 # Should-Start:
 # Required-Stop:
 # Should-Stop:
-# Default-Start:       sysinit
+# Default-Start:       S
 # Default-Stop:        
 # Short-Description:   Cleans temporary directories early in the boot process.
 # Description:         Cleans temporary directories /var/run, /var/lock, and
