@@ -1,6 +1,10 @@
 ChangeLog
+20080831 - [dj] * Corrected more, and minimized dependencies in scripts.
+                * Don't try to write to bootlog in 0 and 6.
+                * Use /etc/rcS.d instead of /etc/rcsysinit.d - added
+                  replacement /etc/inittab file
 
-20080830 - [dj] * Corrected remaining dependency errors in scrpt headers.
+20080830 - [dj] * Corrected remaining dependency errors in script headers.
 
 20080531 - [dj] * Synced with LFS-Bootscrpts-20080531 (use udevadm)
                 * Added additional functions to manage_functions script.
